scrubber timeupdate event fixed. styling tweaks: middle alignment fix for navbar

--- a/resources/sass/player.scss
+++ b/resources/sass/player.scss
@@ -75,52 +75,60 @@ audio {
   display: none;
 }
 
-.player {
-  font-size: 2em;
-  margin: 0 0.25em;
+.navbar {
 
-  -webkit-user-select: none; /* Safari */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE10+/Edge */
-  user-select: none; /* Standard */
+  .player {
+    font-size: 2em;
+    margin: 0 0.25em;
 
-  svg {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 
-    &.player-btn-pause {
-      display: none;
+    svg {
+
+      &.player-btn-pause {
+        display: none;
+      }
+
+      color: #ddd;
+
+      &:hover {
+        color: #fff;
+        cursor: pointer;
+      }
+
+      &.selected {
+        color: $orange;
+      }
+
     }
 
-    color: #ddd;
-
-    &:hover {
-      color: #fff;
-      cursor: pointer;
+    // scrubber
+    input[type="range"] {
+      height: 28px;
+      -webkit-appearance: none;
+      border: 1px solid #ddd;
+      -webkit-border-radius: 20px;
+      -moz-border-radius: 20px;
+      border-radius: 20px;
+      background-color: #343a40;
     }
+    input::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      width: 20px;
+      height: 20px;
+      border:1px solid #ddd;
 
-    &.selected {
-      color: $orange;
+      -webkit-border-radius: 10px;
+      border-radius: 10px;
+      background: $orange;
     }
-
   }
 
-  // scrubber
-  input[type="range"] {
-    height: 28px;
-    -webkit-appearance: none;
-    border: 1px solid #ddd;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 20px;
-    background-color: #343a40;
-  }
-  input::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    width: 20px;
-    height: 20px;
-    border:1px solid #ddd;
-
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    background: $orange;
+  input, p {
+    vertical-align: middle;
+    margin: 0;
   }
 }
